@@ -762,8 +762,8 @@
           <compilerArgs>
             <arg>--add-modules</arg>
             <arg>jdk.incubator.vector</arg>
+            <arg>--enable-preview</arg>
             <arg>-Xpkginfo:always</arg>
-            <arg>${extra.compiler.args}</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -789,8 +789,8 @@
             <compilerArgs>
               <arg>--add-modules</arg>
               <arg>jdk.incubator.vector</arg>
+              <arg>--enable-preview</arg>
               <arg>-Xpkginfo:always</arg>
-              <arg>${extra.compiler.args}</arg>
             </compilerArgs>
             <annotationProcessorPaths>
               <path>
@@ -1138,10 +1138,10 @@
       <id>fat-jar</id>
       <build>
         <plugins>
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <inherited>false</inherited>
             <executions>
               <execution>
                 <id>shade-parent-skip</id>
@@ -1151,18 +1151,14 @@
                   <skip>true</skip>
                 </configuration>
               </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <executions>
               <execution>
+                <id>fat-jar-shade</id>
                 <phase>package</phase>
                 <goals>
                   <goal>shade</goal>
                 </goals>
                 <configuration>
+                  <skip>false</skip>
                   <shadedArtifactAttached>true</shadedArtifactAttached>
                   <shadedClassifierName>fat</shadedClassifierName>
                   <createDependencyReducedPom>false</createDependencyReducedPom>
